# ipwgml_models

./: LICENSE  README.md  pyproject.toml
src/ipwgml_models/: __init__.py  cli.py
src/ipwgml_models/models/: __init__.py  efficient_net_v2.py  mlp.py  unet.py  xgboost.py
